<resources>
    <string name="app_name">AndroidEnterprise</string>
    <string name="login_text">登陆</string>
    <string name="register_text">注册</string>
    <string name="password_hint">密码</string>
    <string name="verify_hint">验证码</string>
    <string name="get_verify_text">获取验证码</string>
    <string name="action_bar_course">课程</string>
    <string name="action_bar_mine">个人中心</string>
    <string name="action_bar_music">乐器</string>
    <string name="action_bar_order">预约订单</string>
    <string name="action_bar_message">我的留言</string>
    <string name="action_bar_order_info">订单详情</string>
    <string name="action_bar_portrait">头像</string>
    <string name="action_bar_record">交易记录</string>
    <string name="schedule_text">设置上课时间</string>
    <string name="schedule_acc">接受上课时间</string>
    <string name="schedule_rej">拒绝上课时间</string>
    <string name="course_info_title">课程详情</string>
    <string name="price_sign">¥</string>
    <string name="logistics_info_title">物流详情</string>
    <string name="search_hint">关键词</string>
    <string name="search_course_text">课程</string>
    <string name="search_instru_text">乐器</string>
    <string name="search_order_text">预约订单</string>
    <string name="search_record_text">交易记录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>

    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="text">http://miloisbadboy.com/</string>

    <!--activity_suggest_complain-->
    <string name="complain_suggest_str">投诉建议</string>
    <string name="commit_str">提交</string>
    <string name="input_context_str">输入内容</string>
    <string name="complain_telephone_str">投诉电话</string>
    <string name="complain_telephone_number_str">40000000000</string>
    <string name="complain_str">投诉</string>
    <string name="operation_suggest_str">操作建议</string>
    <string name="other_str">其他</string>

    <!--activity_center_help-->
    <string name="help_center_str">帮助中心</string>
    <string name="use_article_str">使用文章</string>
    <string name="about_str">关于XXX</string>

    <string name="instant_buy_gv_item">属性</string>
    <!-- activity_instrument_detail -->
    <string name="instrument_info_title">乐器详情</string>
    <string name="instrument_info_canshu">产品参数</string>>
    <string name="instrument_info_detail">商品描述</string>
    <string name="instrument_info_info">内容内容内容内容内内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容容内容内容</string>
    <string name="bottom_total_left">总计(含运费</string>
    <string name="bottom_total_right">)</string>
    <string name="buy">购买</string>
    <string name="place">上海</string>
    <string name="transfer_price">运费 :</string>
    <string name="transfer_fee">0.00</string>
    <string name="money_sign">￥</string>
    <string name="price_flute">5000.00</string>
    <string name="price_total">5000.00</string>
    <string name="price_flute_with_line">6000.00</string>
    <string name="instrument_XXXX">乐器XXXXXXXXX</string>
    <string name="select_property">选择属性</string>
    <string name="right_now_buy">立即购买</string>
    <!--activity_students_feed_back-->
    <string name="students_feed_back">学员反馈</string>
    <string name="students_feed_back_time">课时1</string>
    <!--activity_release_feed_back-->
    <string name="release_feed_back">发布反馈</string>
    <string name="release">发布</string>
    <string name="select_course_time">选择课时</string>
    <string name="please_input_thought">请输入感想。。。</string>
    <string name="first_course_time">课时1</string>
    <string name="second_course_time">课时2</string>
    <string name="third_course_time">课时3</string>
    <string name="studentsXXX">学员XXX</string>
    <string name="six_minutes_ago">6分钟前</string>
    <string name="contactXXXXX">内容XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <!--activity_order_detail-->
    <string name="instrumentXXX">乐器XXX乐器XXX乐器XXX乐器XXX乐器XXX乐器XXX乐器XXX</string>
    <string name="order_detail_property">XXX属性</string>
    <string name="order_detail_money">5000.00</string>
    <string name="paid">实付</string>
    <!--activity_us_contact-->
    <string name="contact_us_str">联系我们</string>
    <string name="telephone_str">电话</string>
    <string name="telephone_number_str">400000000</string>
    <string name="dial_str">拨 打</string>
    <string name="service_str">客服</string>
    <string name="service_01_str">客服1</string>
    <string name="qq_str">QQ</string>

    <string name="activity_confirm_order_title_str">确认订单</string>
    <string name="confirm_order_consignee_str">收货人：</string>
    <string name="confirm_order_consignee_address_str">地点：</string>
    <string name="confirm_order_buyer_message_str">买家留言：</string>
    <string name="confirm_order_buyer_message_input_str">点击留言</string>
    <string name="confirm_order_freight_str">运费</string>
    <string name="confirm_order_freight_money_symbol_str">¥</string>
    <string name="confirm_order_real_pay_str">实付（含运费）</string>
    <string name="confirm_order_payment_method_str">支付方式</string>
    <string name="confirm_order_payment_alipay_str">支付宝支付</string>
    <string name="confirm_order_payment_wechat_str">微信钱包支付</string>
    <string name="confirm_order_amount_str">金额</string>
    <string name="confirm_order_submit_order_str">提交订单</string>
    <string name="confirm_order_message_board_str">留言</string>
    <string name="confirm_order_leave_message_resolve_str">取消</string>
    <string name="confirm_order_leave_message_affirm_str">确定</string>
    <string name="students_head_list_title_str">学员列表</string>
    <string name="students_head_list_title_right_bracket_str">（</string>
    <string name="students_head_list_title_left_bracket_str">）</string>
    <string name="students_list_title_str">学员列表</string>

    <!--activity_select_add-->
    <string name="select_add">选择地址</string>
    <string name="select_add_increase">增加新地址</string>
    <string name="select_add_edit">编辑</string>
    <!--activity_edit_add-->
    <string name="edit_add">编辑地址</string>
    <string name="consignee">收货人姓名</string>
    <string name="phonenum">手机号码</string>
    <string name="detailed">详细地址</string>
    <string name="click_input">点击即可输入</string>
    <string name="delete">删除当前地址</string>
    <string name="conserve">保存</string>
    <!--activity_course_order-->
    <string name="course_order">课程订购</string>
    <string name="account">账户</string>
    <string name="course_information">课程信息</string>
    <string name="real_name">真实姓名</string>
    <string name="money">金额</string>
    <string name="confirm_order">确认订购</string>
    <string name="asterisk">*</string>

    <!--<string name="qq_str">QQ</string>-->

    <!--activity_course_calendar-->
    <string name="course_calendar_title">课程日历</string>
    <string-array name="custom_weekdays">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string-array name="custom_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <!--activity_order_payment-->
    <string name="activity_orderpayment_title_str">
        订单支付
    </string>
    <string name="activity_orderpayment_courseInfo_title_str">
        课程信息
    </string>
    <string name="activity_orderpayment_account_title_str">
        账户
    </string>
    <string name="activity_orderpayment_Attn_title_str">
        联系人
    </string>
    <string name="activity_orderpayment_OrderNo_title_str">
        订单号
    </string>
    <string name="activity_orderpayment_sum_title_str">
        金额
    </string>
    <string name="activity_orderpayment_payment_title_str">
        支付方式
    </string>
    <string name="activity_orderpayment_alipay_title_str">
        支付宝支付
    </string>
    <string name="activity_orderpayment_wechatpay_title_str">
        微信钱包支付
    </string>
    <string name="activity_orderpayment_payment_btn_str">
        去支付
    </string>

    <!--activity_my_works-->
    <string name="myworks_str">我的作品</string>
    <!--activity_my_works_delete-->
    <string name="myworks_delete_str">删除</string>
    <string name="myworks_delete_btn">删  除</string>
    <!--activity_my_works_select-->
    <string name="myworks_select_str">选择作品</string>
    <string name="myworks_select_confirm_str">确定</string>
    <string name="activity_pay_success_title_str">支付成功</string>
    <string name="activity_pay_success_remind_text_str">请关注上课时间按时上课</string>
    <string name="activity_pay_success_check_btn_str">查看课程详情</string>
    <string name="activity_pay_success_back_btn_str">返回课程中心</string>
    <string name="instrument_pay_success_check_btn_str">查看乐器详情</string>
    <string name="instrument_pay_success_back_btn_str">返回乐器中心</string>

    <!--activity_personal_data-->
    <string name="activity_personal_data_title_text">个人资料</string>
    <string name="activity_personal_data_head_text">头像</string>
    <string name="activity_personal_data_account_text">账户（手机号）</string>
    <string name="activity_personal_data_area_text">地区</string>
    <string name="activity_personal_data_other_text">其他</string>
    <string name="activity_personal_data_self_text">自我介绍</string>

    <!--photo picker-->

    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="selectimg">选择头像</string>

    <!--item_student_head-->
    <string name="student_name_text">名称名称</string>

    <!--item_course_calendar-->
    <string name="course_title">课程：</string>
    <string name="add_title">地址：</string>

</resources>
