<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/order_detail_margin_many"
                android:paddingBottom="@dimen/order_detail_margin_many"
                android:paddingLeft="@dimen/order_detail_margin_many"
                android:paddingRight="@dimen/order_detail_margin_many">
    <ImageView
            android:background="#f0f0f0"
            android:id="@+id/iv_img"
            android:layout_width="@dimen/order_detail_img"
            android:layout_height="@dimen/order_detail_img"/>
    <TextView
            android:text="@string/instrumentXXX"
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_img"
            android:layout_marginStart="@dimen/order_detail_margin_many"
            android:layout_alignTop="@id/iv_img"
            android:layout_marginTop="@dimen/order_detail_lv_name_margintop"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/order_detail_lv_name_size"/>
    <TextView
            android:text="@string/order_detail_property"
            android:id="@+id/tv_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_name"
            android:layout_below="@id/tv_name"
            android:layout_marginTop="@dimen/order_detail_margin_many"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/order_detail_text_size"/>
    <TextView
            android:text="@string/order_detail_money"
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/iv_img"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/order_detail_lv_price_size"/>
    <TextView
            android:id="@+id/tv_price_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tv_price"
            android:layout_alignBaseline="@id/tv_price"
            android:text="@string/price_sign"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/order_detail_lv_price_size"/>

</RelativeLayout>