<?xml version="1.0" encoding="utf-8"?>
<!--Created by chenguojiao : 联系我们-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.ContactUsActivity">
    <org.example.androidenterprise.view.TopbarView
            android:id="@+id/topbar_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></org.example.androidenterprise.view.TopbarView>
    <!--<include-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="match_parent"-->
            <!--layout="@layout/top_bar_rl"/>-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_str"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/contact_us_text_size"
            android:layout_marginLeft="@dimen/contact_us_tv_left_dis"
            android:layout_marginTop="@dimen/contact_us_tv_top_dis"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_height"
            android:background="@color/color_d1d1d1"
            android:layout_marginTop="@dimen/tv_top_dis"
            android:layout_marginLeft="@dimen/tv_left_dis"
            android:layout_marginRight="@dimen/tv_right_dis"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tv_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone_str"
                android:textSize="@dimen/contact_us_text_size"
                android:textColor="@color/color_999999"
                android:layout_marginLeft="@dimen/telephone_tv_left_dis"
                android:layout_marginTop="@dimen/telephone_tv_top_dis"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone_number_str"
                android:textSize="@dimen/contact_us_text_size"
                android:textColor="@color/color_666666"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_telephone"
                android:layout_marginLeft="@dimen/contact_telephone_num_tv_left_dis"/>
        <TextView
                android:id="@+id/tv_dial_telephone"
                android:layout_width="@dimen/dial_tv_width"
                android:layout_height="@dimen/dial_tv_height"
                android:background="@drawable/activity_contact_us_telephone_bg"
                android:drawableLeft="@mipmap/ic_contact_us_telephone"
                android:paddingStart="@dimen/dial_padding_start_dis"
                android:drawablePadding="@dimen/dial_drawable_padding"
                android:text="@string/dial_str"
                android:gravity="center|end"
                android:paddingEnd="@dimen/dial_padding_end"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/contact_us_text_size"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dial_tv_right_dis"
                android:layout_centerVertical="true"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_height"
                android:background="@color/color_d1d1d1"
                android:layout_below="@+id/tv_telephone"
                android:layout_marginLeft="@dimen/tv_left_dis"
                android:layout_marginRight="@dimen/tv_right_dis"
                android:layout_marginTop="@dimen/tv_margin_top"/>

    </RelativeLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_str"
            android:textSize="@dimen/contact_us_text_size"
            android:textColor="@color/color_999999"
            android:layout_marginLeft="@dimen/service_tv_left_dis"
            android:layout_marginTop="@dimen/service_tv_top_dis"
    />
    <GridView
            android:id="@+id/gv_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numColumns="4"
            android:layout_marginTop="@dimen/service_gv_top_dis"
            android:verticalSpacing="@dimen/service_gv_vertical_spacing"
            android:layout_marginLeft="@dimen/service_gv_left_dis"
            android:layout_marginRight="@dimen/service_gv_right_dis"
            android:listSelector="@android:color/transparent"
            android:focusable="true">
    </GridView>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_height"
            android:background="@color/color_d1d1d1"
            android:layout_below="@+id/tv_telephone"
            android:layout_marginLeft="@dimen/tv_left_dis"
            android:layout_marginRight="@dimen/tv_right_dis"
            android:layout_marginTop="@dimen/tv_margin_top"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq_str"
            android:textSize="@dimen/contact_us_text_size"
            android:textColor="@color/color_999999"
            android:layout_marginLeft="@dimen/qq_tv_left_dis"
            android:layout_marginTop="@dimen/qq_tv_top_dis"
    />
    <GridView
            android:id="@+id/gv_qq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="3"
            android:verticalSpacing="@dimen/qq_gv_vertical_spacing"
            android:layout_marginTop="@dimen/qq_gv_top_dis"
           android:layout_marginLeft="@dimen/qq_gv_left_dis"
            android:layout_marginRight="@dimen/qq_gv_right_dis"

            >
    </GridView>

</LinearLayout>
