<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.example.androidenterprise.activity.CourseOrderActivity">

    <RelativeLayout
            android:id="@+id/course_order_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            android:background="@color/color_97c8cd">
        <ImageButton
                android:id="@+id/course_order_return_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/course_order_margin_many"
                android:background="@color/transparent"
                android:src="@mipmap/ic_return"
                android:paddingTop="@dimen/course_order_margin_many"
                android:paddingBottom="@dimen/course_order_margin_many"
                android:paddingRight="@dimen/course_order_margin_many"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/course_order"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/action_bar_text_size"/>

    </RelativeLayout>

    <TextView
            android:id="@+id/course_order_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_order_rl"
            android:layout_marginTop="@dimen/course_order_margin_many"
            android:layout_marginLeft="@dimen/course_order_margin_many"
            android:text="@string/account"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/course_order_text_size"/>
    <TextView
            android:text="学员XXX"
            android:id="@+id/course_order_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/course_order_account"
            android:layout_toRightOf="@id/course_order_account"
            android:layout_marginLeft="@dimen/course_order_account_margin_name"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/course_order_text_size"/>
    <TextView
            android:id="@+id/course_order_line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/storke_all"
            android:layout_below="@id/course_order_account"
            android:layout_marginTop="@dimen/course_order_margin_many"
            android:background="@color/color_e0e0e0"/>
    <TextView
            android:id="@+id/course_order_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_order_line1"
            android:layout_marginTop="@dimen/course_order_margin_many"
            android:layout_alignLeft="@id/course_order_account"
            android:text="@string/course_information"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/course_order_text_size"/>
    <TextView
            android:id="@+id/course_order_line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/storke_all"
            android:layout_below="@id/course_order_information"
            android:layout_marginTop="@dimen/course_order_margin_many"
            android:layout_marginLeft="@dimen/course_order_margin_many"
            android:layout_marginRight="@dimen/course_order_margin_many"
            android:background="@color/color_e0e0e0"/>

    <ListView
            android:id="@+id/course_order_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_order_line2"
            android:divider="@color/color_d1d1d1"
            android:dividerHeight="@dimen/storke_all"/>

    <TextView
            android:id="@+id/course_order_line3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/storke_all"
            android:layout_below="@id/course_order_lv"
            android:background="@color/color_e0e0e0"/>

    <RelativeLayout
            android:id="@+id/course_order_rl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_order_line3"
            android:layout_marginTop="@dimen/course_order_margin_many"
            android:layout_marginLeft="@dimen/course_order_margin_many">
        <TextView
                android:id="@+id/course_order_real_name_asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/asterisk"
                android:textColor="@color/color_ff0000"
                android:textSize="@dimen/course_order_text_size"/>
        <TextView
                android:id="@+id/course_order_real_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/course_order_real_name_asterisk"
                android:layout_centerVertical="true"
                android:text="@string/real_name"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/course_order_text_size"/>
        <EditText
                android:id="@+id/course_order_real_name"
                android:layout_width="180dp"
                android:layout_height="@dimen/course_order_height"
                android:layout_toRightOf="@id/course_order_real_name_tv"
                android:layout_marginLeft="@dimen/course_order_margin_many"
                android:paddingStart="@dimen/course_order_margin_many"
                android:background="@drawable/course_order_999999"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/course_order_text_size"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/course_order_rl_phonenum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_order_rl_name"
            android:layout_marginTop="@dimen/course_order_margin_many"
            android:layout_marginLeft="@dimen/course_order_margin_many">
        <TextView
                android:id="@+id/course_order_phonenum_asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/asterisk"
                android:textColor="@color/color_ff0000"
                android:textSize="@dimen/course_order_text_size"/>
        <TextView
                android:id="@+id/course_order_phonenum_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/course_order_phonenum_asterisk"
                android:layout_centerVertical="true"
                android:text="@string/phonenum"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/course_order_text_size"/>
        <EditText
                android:id="@+id/course_order_phonenum"
                android:layout_width="180dp"
                android:layout_height="@dimen/course_order_height"
                android:layout_toRightOf="@id/course_order_phonenum_tv"
                android:layout_marginLeft="@dimen/course_order_margin_many"
                android:paddingStart="@dimen/course_order_margin_many"
                android:background="@drawable/course_order_999999"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/course_order_text_size"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/course_order_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/course_order_bottom"
            android:layout_alignParentBottom="true">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/storke_all"
                android:background="@color/color_d1d1d1"/>
        <TextView
                android:id="@+id/course_order_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/course_order_margin_many"
                android:layout_centerVertical="true"
                android:text="@string/money"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/course_order_text_size"/>
        <TextView
                android:id="@+id/course_order_price_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/course_order_money"
                android:layout_marginLeft="@dimen/course_order_margin_many"
                android:layout_centerVertical="true"
                android:text="@string/price_sign"
                android:textColor="@color/color_F49C14"
                android:textSize="@dimen/course_order_text_size"/>
        <TextView
                android:text="5000.00"
                android:id="@+id/course_order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/course_order_price_sign"
                android:layout_alignBaseline="@id/course_order_price_sign"
                android:textColor="@color/color_F49C14"
                android:textSize="@dimen/course_order_price_size"/>
        <Button
                android:id="@+id/course_order_confirm"
                android:layout_width="@dimen/course_order_btn_width"
                android:layout_height="@dimen/course_order_height"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/course_order_margin_many"
                android:layout_centerVertical="true"
                android:background="@color/color_97c8cd"
                android:text="@string/confirm_order"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/course_order_btn_size"
                style="?android:attr/borderlessButtonStyle"/>

    </RelativeLayout>

</RelativeLayout>